# op_23

./: .gitignore  CMakeLists.txt  README.md  assignments.md  functions.cpp  functions.h  main  main.ccp  main.cpp
binf/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: fun_min&max_in_massiv.cpp  fun_square.cpp  fun_sum.cpp  function.cpp  function.h  function.test.cpp  functions.cpp  functions.h  functions.test.cpp  main.cpp  nolibmain.cpp
src/cpp/: main.cpp
